# cCourse

./: CMakeLists.txt  README.md  buildApp.bat
cApps/FunctioPointerCallbacks/: CmakeLists.txt
cApps/FunctioPointerCallbacks/include/: functionPointerAndCallbacks.h  functionPointers.h
cApps/FunctioPointerCallbacks/interfaces/include/: buttonAction.h  mathOperation.h  operationToArray.h
cApps/FunctioPointerCallbacks/interfaces/source/: buttonAction.c  mathOperation.c  operationToArray.c
cApps/FunctioPointerCallbacks/source/: buttonApp.c  calculator.c  callbacks.c  functionPointers.c  operationToArrayApp.c
cApps/PointersModule/: CmakeLists.txt
cApps/PointersModule/include/: Pointers.h
cApps/PointersModule/interfaces/include/: MatrixAllocationIf.h  reverseArrayIf.h  swapNumberIf.h
cApps/PointersModule/interfaces/source/: MatrixAllocationIf.c  reverseArrayIf.c  swapNumberIf.c
cApps/PointersModule/source/: MatrixAllocationApp.c  reverseArrayApp.c  swapNumbersApp.c
cApps/linkedLists/: CmakeLists.txt
cApps/linkedLists/include/: linkedLists.h
cApps/linkedLists/interfaces/include/: linkedListIf.h  singleLinkedListIf.h
cApps/linkedLists/interfaces/source/: linkedListIf.c  singleLinkedListIf.c
cApps/linkedLists/source/: linkedListInsertionApp.c  singleLinkedLists.c
main/: main.c
